--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
   <h1>Hello World</h1>
+
+  <button onclick="createRoom()">
+    Create Room
+  </button>
+
+  <script type="text/javascript" async defer src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/6.4.0/adapter.min.js"></script>
+  <script src="/js/janus.js"></script>
+  <script src="/js/createRoom.js"></script>
 </body>
 </html>
