--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -3,11 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/css/video.css">
   <title>Room</title>
 </head>
 <body>
   <div id="participants-video">
     <video id="local"></video>
+  </div>
+  <div class='webcam' id="video-container">
+    <video autoplay width="640" height="480"></video>
+    <canvas width="640" height="480"></canvas>
+  </div>
+  <div class="message-container">
+    <input type="text">
+    <button>send</button>
   </div>
   <input id="roomId" type="hidden" value="{{roomId}}"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.min.js" integrity="sha512-Jq1JnVXlkYQOYQpz31qIV/0l67d97J9I6sbILtfiSYX00Isr2zK7XDRmHW8d2iBTwNZfL7sHkHGT0EzLs90jdw==" crossorigin="anonymous"></script>  
