weebrtc flow done

--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -8,10 +8,14 @@
 </head>
 <body>
   <h1>Room: {{roomId}}</h1>
-  <div id="participants-video">
+  <div>
+    <h1>Participants:</h1>
+    <div id="participants-video">
+    </div>
   </div>
 
   <div class="local-stream-container">
+    <h2>You</h2>
     <video autoplay id="local-stream"></video>
     <canvas width="640" height="480"></canvas>
   </div>
