--- a/client/static/css/room.css
+++ b/client/static/css/room.css
@@ -6,9 +6,19 @@
 
 .local-stream-container{
     text-align: center;
-    height: 300px;
+    height: 270px;
 }
 
 .local-stream-container > video {
     height: 100%;
+}
+
+#participants-video {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#participants-video video {
+    height: 300px;
 }
