--- a/templates/room.html
+++ b/templates/room.html
@@ -3,13 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/css/room.css">
   <title>Room</title>
 </head>
 <body>
-  <div id="participants-video">
-    <video id="local"></video>
+  <h1>Room: {{roomId}}</h1>
+  <div>
+    <h1>Participants:</h1>
+    <div id="participants-video">
+    </div>
+  </div>
+
+  <div class="local-stream-container">
+    <h2>You</h2>
+    <video autoplay id="local-stream"></video>
+    <canvas width="640" height="480"></canvas>
+  </div>
+
+  <div class="message-container">
+    <input type="text" id='message-input'>
+    <button onclick="sendMessage()">send</button>
   </div>
   <input id="roomId" type="hidden" value="{{roomId}}"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.min.js" integrity="sha512-Jq1JnVXlkYQOYQpz31qIV/0l67d97J9I6sbILtfiSYX00Isr2zK7XDRmHW8d2iBTwNZfL7sHkHGT0EzLs90jdw==" crossorigin="anonymous"></script>  
   <script type="text/javascript" async defer src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/6.4.0/adapter.min.js"></script>
   <script src="/js/janus.js"></script>
