implemented the messages

--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -19,6 +19,7 @@
   <div class="message-container">
     <input type="text" id='message-input'>
     <button onclick="sendMessage()">send</button>
+    <input type="file" id="file-input" name="file-input">
   </div>
   <input id="roomId" type="hidden" value="{{roomId}}"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
