--- a/templates/index.html
+++ b/templates/index.html
@@ -3,55 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,700&display=swap" rel="stylesheet"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="/css/index.css">
-  <title>Home</title>
+  <title>Recor</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#">
-        <img src="/images/Untitled_Artwork_10.png" width="30px" height="30px" alt="">
-      </a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <button onclick="createRoom()" class="create">
-        Create Room
-      </button>
-      
-    </div>
-  </nav>
   
-  <div class="wrapper">
-    <div class="text-wrapper">
-      <div class="primary-text">
-        Easily Engage your audience in minutes
+  <div class="navbar-main-page">
+    <div class="logo-container">
+      <img src="/images/logo.png" height="80"/>
+    </div>
+
+    <div class="nav-middle-buttons">
+      <div class="nav-middle-button">
+          <span class="active">Home</span>
       </div>
-      <div class = "secondary-text">
-        Lorem Ipsum 
+      <div class="nav-middle-button">
+          <span>About</span>
       </div>
-      <div class="buttons">
-        <button> Lorem </button>
-        <button> Join a Call </button>
+      <div class="nav-middle-button">
+          <span>Live Features</span>
       </div>
     </div>
-    <div class="image-wrapper">
-      <img src="/images/landing_page_graphic.png" alt="" class="f-image">
+
+    <div class="nav-right-buttons">
+      <div onclick="createRoom()" class="create-room-button">Create</div>
     </div>
   </div>
+
+  <div class="home-page-section">
+
+    <div class="home-page-section-left">
+      <div class="home-page-headline">
+        COMMUNICATION MADE SIMPLE
+      </div>
+
+      <div class="home-page-main-text">
+        <div>Easily engage</div> 
+        <div>your audience</div>
+        <div>in minutes<span style="color: rgb(3, 5, 255);">.</span></div>
+      </div>
+
+      <div class="home-page-sub-text">
+        <div>Powerful video communication </div>
+        <div>tool for companies of all sizes</div>
+      </div>
+      
+      <div class="home-page-create-button">
+        <div onclick="createRoom()" class="create-room-button">
+          Create New Room
+        </div>
+      </div>
+    </div>
+
+    <div class="home-page-section-right">
+      <img src="/images/landing_page_graphic.png" width="400"/>
+    </div>
+
+  </div>
+
+  <div class="about-section">
+    <div>
+      <p>
+        Our mission is to simulate a live meeting. <br/>
+        Powerful video comunication tool for <br/>
+        companies of all sizes
+      </p>
+
+      <p>
+        PowerfuPowerful video comunication tool for <br/>
+        companies of all sizes Powerful video comunication tool for <br/>
+        companies of all sizes
+      </p>
+    </div>
+
+  </div>
+  
   <script type="text/javascript" async defer src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/6.4.0/adapter.min.js"></script>
   <script src="/js/janus.js"></script>
   <script src="/js/createRoom.js"></script>
