--- a/client/static/css/room.css
+++ b/client/static/css/room.css
@@ -1,3 +1,8 @@
+body{
+    font-family: 'Montserrat'!important;
+    overflow-x: hidden;
+}
+
 .message-container{
     position: absolute;
     bottom: 0;
@@ -6,19 +11,173 @@
 
 .local-stream-container{
     text-align: center;
-    height: 270px;
+    margin: 10px 0;
+    background: transparent;
+    position: relative;
 }
 
 .local-stream-container > video {
+    border-radius: .25rem;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    width: 100%;
+    border-radius: .25rem;
+    display: inline-block;
+}
+
+.participants-video-container{
+    position: absolute;
+    top: 10px;
+    right: 10px;
     height: 100%;
+    overflow-y: auto;
 }
 
 #participants-video {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
 }
 
 #participants-video video {
-    height: 300px;
+    width: 230px;
+    border-radius: 0.25rem;
+    margin: 5px 0;
 }
+
+.room-container {
+    height: auto;
+    display: flex;
+    padding: 20px 40px;
+}
+
+.room-left {
+    flex: 2;
+    /* height: 100%; */
+}
+
+.room-right {
+    flex: 1;
+    height: auto;
+    padding-bottom: 32px;
+    margin-left: 10px;
+    background: transparent;
+}
+
+.room-right-content {
+    height: 100%;
+    background: rgb(183,255,240);
+    background: linear-gradient(159deg, rgba(183,255,240,1) 0%, rgba(255,216,171,1) 100%);
+    border-radius: 0.25rem;
+    padding: 10px;
+    position: relative;
+}
+
+.logo-container{
+    margin: 5px 7px;
+}
+
+.room-header {
+    display: flex;
+}
+
+.room-header-block {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 15px;
+    width: 100%;
+    background: rgb(183,255,240);
+    background: linear-gradient(159deg, rgba(183,255,240,1) 0%, rgba(255,216,171,1) 100%);
+    border-radius: 0.25rem;
+    padding: 15px 0px;
+    position: relative;
+    padding-left: 30px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.room-header-buttons {
+    margin: 12px 20px;
+}
+
+.text-input-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+    left:50%;
+    transform: translateX(-50%);
+    padding: 5px 12px;
+    flex: 1;
+    border-radius: .1rem;;
+    background-color: rgba(33, 33, 46, 0.2);
+}
+
+#message-input {
+  width: calc(150px + 10vw);
+  position: relative;
+  left: -3px;
+  top: -.4px;
+  border-radius: 20px;
+  padding: 4px 9px; 
+  outline: none;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: thin;
+  border-color: lightgray;
+  font-family: inherit;
+}
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  left: -7px;
+  opacity: 0.8;
+  transition: 0.25s ease-in-out;
+}
+
+.inputfile + label * {
+	pointer-events: none;
+}
+
+#send-button {
+    width: 21px;
+    height: 21px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    outline: none;
+    transition: 0.25s ease-in-out;
+    border-style: solid;
+    border-width: 0px;
+    border-color: gray;
+    cursor: pointer;
+  }
+  
+  #send-button:hover{
+    border-width: 0.7px;
+    transform: translateY(-2px);
+  }
+
+  .messages-container{
+      overflow-y: auto;
+      height: 100%;
+      margin: 30px 6px;
+  }
+
+  .room-chat-message{
+      padding: 4px 6px;
+      border-radius: .25rem;
+      text-align: left;
+  }
